@@ -16,24 +16,48 @@
     <parent>
         <groupId>com.sun.xml.ws</groupId>
         <artifactId>project</artifactId>
-        <version>2.3.1-SNAPSHOT</version>
+        <version>2.3.2-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.xml.ws</groupId>
     <artifactId>wscompile</artifactId>
-    <version>2.3.1-SNAPSHOT</version>
+    <version>2.3.2-SNAPSHOT</version>
 
     <name>JAX-WS RI Tools (wscompile)</name>
     <description>JAX-WS RI Tools</description>
 
     <properties>
-        <ant.version>1.9.8</ant.version>
+        <ant.version>1.10.5</ant.version>
         <findbugs.exclude>${project.basedir}/exclude.xml</findbugs.exclude>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rt</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>rt-fi</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>httpspi-servlet</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>servlet</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>policy</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-jxc</artifactId>
@@ -43,18 +67,8 @@
             <artifactId>jaxb-xjc</artifactId>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>rt</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.sun.istack</groupId>
             <artifactId>istack-commons-runtime</artifactId>
-            <version>${istack.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>policy</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.ant</groupId>
@@ -89,9 +103,6 @@
             <plugin>
                 <groupId>com.sun.istack</groupId>
                 <artifactId>istack-commons-maven-plugin</artifactId>
-                <configuration>
-                    <atGenerated>false</atGenerated>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -130,28 +141,28 @@
                             <excludeTransitive>true</excludeTransitive>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>javax.xml.bind</groupId>
-                                    <artifactId>jaxb-api</artifactId>
+                                    <groupId>jakarta.xml.bind</groupId>
+                                    <artifactId>jakarta.xml.bind-api</artifactId>
                                     <type>jar</type>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>javax.xml.ws</groupId>
-                                    <artifactId>jaxws-api</artifactId>
+                                    <groupId>jakarta.xml.ws</groupId>
+                                    <artifactId>jakarta.xml.ws-api</artifactId>
                                     <type>jar</type>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>javax.xml.soap</groupId>
-                                    <artifactId>javax.xml.soap-api</artifactId>
+                                    <groupId>jakarta.xml.soap</groupId>
+                                    <artifactId>jakarta.xml.soap-api</artifactId>
                                     <type>jar</type>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>javax.annotation</groupId>
-                                    <artifactId>javax.annotation-api</artifactId>
+                                    <groupId>jakarta.annotation</groupId>
+                                    <artifactId>jakarta.annotation-api</artifactId>
                                     <type>jar</type>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>javax.jws</groupId>
-                                    <artifactId>javax.jws-api</artifactId>
+                                    <groupId>jakarta.jws</groupId>
+                                    <artifactId>jakarta.jws-api</artifactId>
                                     <type>jar</type>
                                 </artifactItem>
                             </artifactItems>
@@ -165,7 +176,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <excludeArtifactIds>resolver,ant-launcher,ant-nodeps,cobertura,cobertura-runtime,javax.activation</excludeArtifactIds>
+                            <excludeArtifactIds>resolver,ant-launcher,ant-nodeps,cobertura,cobertura-runtime</excludeArtifactIds>
                             <excludeScope>system</excludeScope>
                         </configuration>
                     </execution>
@@ -188,17 +199,41 @@
                     <execution>
                         <id>default-compile</id>
                         <configuration>
+                            <includes>
+                                <include>module-info.java</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>default-compile-mr</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <compileSourceRoots>
+                                <compileSourceRoot>${project.basedir}/src/main/java-mr</compileSourceRoot>
+                            </compileSourceRoots>
+                            <outputDirectory>${project.build.outputDirectory}/META-INF/versions/9</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>default-testCompile</id>
+                        <configuration>
                             <compilerArgs>
-                                <arg>--upgrade-module-path</arg>
-                                <arg>${project.build.directory}/lib/jaxws-api-${jaxws-api.version}.jar:${project.build.directory}/lib/javax.annotation-api-${javax.annotation-api.version}.jar</arg>
-                                <arg>--module-path</arg>
-                                <arg>${project.build.directory}/lib:${project.build.directory}/classes</arg>
-                                <arg>--add-modules</arg>
-                                <arg>ant</arg>
-                                <arg>--add-reads</arg>
-                                <arg>com.sun.istack.tools=ant</arg>
-                                <arg>--add-reads</arg>
-                                <arg>com.sun.tools.ws=ant</arg>
+                                <arg>--add-exports</arg>
+                                <arg>com.sun.tools.ws/com.sun.tools.ws.wsdl.parser=com.sun.tools.ws.test</arg>
+                                <arg>--add-exports</arg>
+                                <arg>com.sun.tools.ws/com.sun.tools.ws.processor=com.sun.tools.ws.test</arg>
+                                <arg>--add-exports</arg>
+                                <arg>com.sun.tools.ws/com.sun.tools.ws.processor.modeler=com.sun.tools.ws.test</arg>
+                                <arg>--add-exports</arg>
+                                <arg>com.sun.tools.ws/com.sun.tools.ws.processor.modeler.annotation=com.sun.tools.ws.test</arg>
+                                <arg>--add-exports</arg>
+                                <arg>com.sun.tools.ws/com.sun.tools.ws.processor.modeler.wsdl=com.sun.tools.ws.test</arg>
+                                <arg>--add-exports</arg>
+                                <arg>com.sun.tools.ws/com.sun.tools.ws.wsdl.document=com.sun.tools.ws.test</arg>
+                                <arg>--add-exports</arg>
+                                <arg>com.sun.tools.ws/com.sun.tools.ws.util=com.sun.tools.ws.test</arg>
                             </compilerArgs>
                         </configuration>
                     </execution>
@@ -218,17 +253,41 @@
                         <net.sourceforge.cobertura.datafile>${net.sourceforge.cobertura.datafile}</net.sourceforge.cobertura.datafile>
                     </systemPropertyVariables>
                     <forkCount>1</forkCount>
-                    <reuseForks>false</reuseForks>
-                    <excludes>
-                        <exclude>com.sun.tools.ws.ant.WsImportTaskTest</exclude>
-                        <exclude>com.sun.tools.ws.ant.WsGenTaskTest</exclude>
-                    </excludes>
+                    <reuseForks>true</reuseForks>
                     <argLine>
-                        --add-modules java.xml.bind
-                        --upgrade-module-path ${endorsed.dir}
-                        --module-path ${project.build.directory}/lib
+                        --add-exports com.sun.tools.ws/com.sun.tools.ws.wsdl.parser=com.sun.tools.ws.test
+                        --add-exports com.sun.tools.ws/com.sun.tools.ws.processor=com.sun.tools.ws.test
+                        --add-exports com.sun.tools.ws/com.sun.tools.ws.processor.modeler=com.sun.tools.ws.test
+                        --add-exports com.sun.tools.ws/com.sun.tools.ws.processor.modeler.annotation=com.sun.tools.ws.test
+                        --add-exports com.sun.tools.ws/com.sun.tools.ws.processor.modeler.wsdl=com.sun.tools.ws.test
+                        --add-exports com.sun.tools.ws/com.sun.tools.ws.wsdl.document=com.sun.tools.ws.test
+                        --add-exports com.sun.tools.ws/com.sun.tools.ws.util=com.sun.tools.ws.test
                     </argLine>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>default-test</id>
+                        <configuration>
+                            <excludes>
+                                <exclude>com.sun.tools.ws.test.wsdl.parser.WSImportSec2Test</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>test-fork2</id>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <com.sun.xml.ws.disableXmlSecurity>true</com.sun.xml.ws.disableXmlSecurity>
+                            </systemPropertyVariables>
+                            <includes>
+                                <include>com.sun.tools.ws.test.wsdl.parser.WSImportSec2Test</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -236,26 +295,15 @@
                 <executions>
                     <execution>
                         <id>default-jar</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
                         <configuration>
                             <archive>
-                                <manifestEntries>
-                                    <Multi-Release>true</Multi-Release>
-                                </manifestEntries>
+                                <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
                             </archive>
                         </configuration>
                     </execution>
-                    <execution>
-                        <id>package-test-jar</id>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
                 </executions>
             </plugin>
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <dependencies>
@@ -265,53 +313,6 @@
                         <version>${ant.version}</version>
                     </dependency>
                 </dependencies>
-                <executions>
-                    <execution>
-                        <id>compile-java9</id>
-                        <phase>compile</phase>
-                        <configuration>
-                            <tasks>
-                                <mkdir dir="${project.build.outputDirectory}/META-INF/versions/${upper.java.level}" />
-                                <javac srcdir="${mrjar.sourceDirectory}"
-                                       destdir="${project.build.outputDirectory}/META-INF/versions/${upper.java.level}"
-                                       classpath="${project.build.outputDirectory}"
-                                       includeantruntime="false"
-                                       source="${upper.java.level}"
-                                       target="${upper.java.level}">
-                                    <compilerarg line="--upgrade-module-path ${project.build.directory}/lib/jaxb-api-${jaxb-api.version}.jar:${project.build.directory}/lib/jaxws-api-${jaxws-api.version}.jar" />
-                                    <classpath>
-                                        <fileset dir="${project.build.directory}/lib">
-                                            <include name="**/*.jar"/>
-                                        </fileset>
-
-                                        <fileset dir="${project.build.directory}/lib/ant">
-                                            <include name="**/*.jar"/>
-                                        </fileset>
-                                        <pathelement location="${project.build.directory}/classes" />
-                                    </classpath>
-                                </javac>
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>update-source-jar</id>
-                        <phase>verify</phase>
-                        <configuration>
-                            <tasks>
-                                <jar destfile="${project.build.directory}/jaxb-xjc-${project.version}-sources.jar" update="true">
-                                    <zipfileset prefix="META-INF/versions" dir="${mrjar.sourceDirectory}"/>
-                                </jar>
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <!--
                     TODO endorse for JDK9
                 <executions>
                     <execution>
@@ -348,21 +349,38 @@
                             <skip>true</skip>
                         </configuration>
                     </execution>
-                </executions>-->
+                </executions>
+            </plugin> -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>add-mr-resource</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>add-resource</goal>
+                        </goals>
+                        <configuration>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/src/main/java-mr</directory>
+                                    <targetPath>META-INF/versions/9</targetPath>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <additionalJOptions>
-                        <!-- ant on classpath -->
-                        <additionalJOption>--add-reads</additionalJOption>
-                        <additionalJOption>com.sun.tools.ws=ALL-UNNAMED</additionalJOption>
-                        <additionalJOption>--add-reads</additionalJOption>
-                        <additionalJOption>com.sun.istack.tools=ALL-UNNAMED</additionalJOption>
-                        <additionalparam>-Xdoclint:none</additionalparam>
-                    </additionalJOptions>
+                    <doclint>none</doclint>
+                    <additionalOptions>
+                        --add-reads com.sun.tools.ws=ALL-UNNAMED
+                        --add-reads com.sun.istack.tools=ALL-UNNAMED
+                    </additionalOptions>
                 </configuration>
             </plugin>
             <!--
